# papercraft_builder

./: Cargo.toml  Trunk.toml  index.html
src/: main.rs  models.rs
src/view/: app.rs  mod.rs  slider.rs  webgl_canvas.rs
src/view/shader/: vertex.glsl
src/view/utils/: mod.rs  webgl.rs
src/view/utils/shader/: vertex.glsl
